added description for the hot tamale

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3957,6 +3957,12 @@ input, select, textarea {
 		margin-top: 6%;
 	}
 
+	.site-img2 {
+		height: 80%;
+		margin: 4%;
+		margin-top: 10%;
+	}
+
 	@media screen and (max-width: 980px) {
 
 		.site-img {
@@ -3964,4 +3970,18 @@ input, select, textarea {
 			margin-top: 6%;
 		}
 
+	}
+
+	@media screen and (max-width: 980px) {
+
+		.site-img2 {
+			margin: 0;
+			margin-top: 6%;
+		}
+
+	}
+
+	.devicon {
+		height: 2rem;
+		width: 2rem;
 	}
