--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2831,11 +2831,11 @@ input, select, textarea {
 			}
 
 			.tiles article:nth-child(6n - 5):before {
-				background-color: #ec8d81;6fc3df
+				background-color: #ec8d81;
 			}
 
 			.tiles article:nth-child(6n - 4):before {
-				background-color: #8d82c4;
+				background-color: #87c5a4;
 			}
 
 			.tiles article:nth-child(6n - 3):before {
@@ -2843,7 +2843,7 @@ input, select, textarea {
 			}
 
 			.tiles article:nth-child(6n - 2):before {
-				background-color: #e7b788;
+				background-color: #8d82c4;
 			}
 
 			.tiles article:nth-child(6n - 1):before {
@@ -2851,7 +2851,7 @@ input, select, textarea {
 			}
 
 			.tiles article:nth-child(6n):before {
-				background-color: #87c5a4;
+				background-color: #e7b788;
 			}
 
 		@media screen and (max-width: 1280px) {
@@ -3495,7 +3495,7 @@ input, select, textarea {
 		}
 
 		#banner.style2:after {
-			background-color: #8d82c4;
+			background-color: #87c5a4;
 		}
 
 		#banner.style3:after {
@@ -3511,7 +3511,7 @@ input, select, textarea {
 		}
 
 		#banner.style6:after {
-			background-color: #87c5a4;
+			background-color: #8d82c4;
 		}
 
 		body.is-preload #banner:after {
